crud + swagger consulta
