# app/Models/Consulta.php
@@ -8,4 +8,5 @@ use Illuminate\Database\Eloquent\Model;
 class Consulta extends Model
 {
     use HasFactory;
+    protected $fillable = ['proc_codigo', 'med_codigo', 'data', 'hora', 'particular'];
 }
